Add backend support for reporter dashboard